tests/paczka2/big_fuzzy/55766691.err
Error in line 3: yGvP A83 99,5
Error in line 4: yGvP S937 28,2
Error in line 2: 0altD A781 97,7
Error in line 18: CY9 A781 4,3
Error in line 10: Ro7wpYAQD S937 14,0
Error in line 20: yGvP A83 44,6
Error in line 33: 0altD A83 11,84
Error in line 36: 0altD A83 10,4
Error in line 27: yGvP S937 207,0
Error in line 53: teD A781 65,2
Error in line 49: 0altD A888 19,1
Error in line 60: oJs4rlcki A83 34,3
Error in line 64: yGvP A888 10,1
Error in line 67: yGvP A83 77,3
Error in line 57: A781 A781 9,1
Error in line 72: CY9 A888 20,8
Error in line 92: oJs4rlcki S937 99,7
Error in line 102: oJs4rlcki A888 21,7
Error in line 103: oJs4rlcki A781 91,9
Error in line 113: oJs4rlcki A888 92,2
Error in line 40: Ro7wpYAQD A83 336,4
Error in line 117: CY9 A781 51,5
Error in line 130: A7{1 A{3 65,1
Error in line 108: 0altD S937 75,7
Error in line 134: 0altD A888 58,2
Error in line 149: yGvP S937 78,97
Error in line 129: CY9 S937 136,5
Error in line 157: 0altD A781 52,5
Error in line 160: 0altD A83 23,4
Error in line 147: yGvP A83 98,4
Error in line 173: oJs4rlcki A781 51,4
Error in line 121: A781 A83 16,6
Error in line 187: yGvP A888 86,8
Error in line 188: yGvP A781 67,5
Error in line 195: 0altD A78m 59,4
Error in line 196: teD A83 17,7
Error in line 199: teD S937 7,4
Error in line 185: A781 A781 167,8
Error in line 204: oJs4rlcki A888 77,g
Error in line 191: yGvP S937 52,9
Error in line 207: yGvP A888 11,
Error in line 194: 0altD A781 46,8
Error in line 211: 0altD S937 33,16
Error in line 200: teD A83 86,4
Error in line 203: oJs4rlcki A83 22,1
Error in line 208: 0altD A83 18,1
Error in line 221: 0altD S937 141,5
Error in line 217: yGvP A888 68,9
Error in line 227: oJs4rlcki A888 40,7
Error in line 228: 0altD A83 6,5
Error in line 236: oJs4rlôki A781 22,5
Error in line 233: oJs4rlcki S937 91,6
Error in line 235: CY9 S937 54,4
Error in line 242: yGvP A83 50,6
Error in line 237: oJs4rlcki A781 62,6
